@@ -22,6 +22,7 @@ Stable versions
 	- Correct default of sample default panning values to -1 (no default
 	  panning) for most module formats.
 	- Fix Galaxy Music System 4.0 sample default panning.
+	- Fix Imago Orpheus IMF note 255 (no note, not key off).
 	- Simplify read_event_mod, read_event_st3 sample default volume
 	  handling.
 	- Fix MED hold/decay implementation and add support for command 8.
